fix:Replace jquery.truncate.js with text-overflow: ellipses.

--- a/mopidy_musicbox_webclient/static/css/webclient.css
+++ b/mopidy_musicbox_webclient/static/css/webclient.css
@@ -470,6 +470,7 @@ a {
     white-space: nowrap;
     font-weight: bold;
     font-size: 14px;
+    text-overflow: ellipses;
 }
 
 #infoartist {
